--- a/.github/workflows/dogbot-times-holiday-booking.yaml.yml
+++ b/.github/workflows/dogbot-times-holiday-booking.yaml.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: dogbot-times-holiday-booking
 
 # Controls when the action will run. 
 on:
